# nextcord-test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  template.py  template2.py  template3.py
logs/: .gitignore
nextcord_test/: __main__.py  config.py
nextcord_test/cogs/ext/: _.py
nextcord_test/cogs/ext/application_checks/: _.py
nextcord_test/cogs/ext/application_checks/core/: _.py  bot_has_any_role.py  bot_has_guild_permissions.py  bot_has_permissions.py  bot_has_role.py  check.py  check_any.py  has_any_role.py  has_guild_permissions.py  has_permissions.py  has_role.py
