[tool.poetry]
name = "nextcord-test"
version = "0.1.0"
description = "A test bot to test bots with testing bots on nextcord"
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = {extras = ["speed"], version = "^2.0.0-beta.2"}
uvloop = "^0.16.0"
ooliver-botbase = "^1.16.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
